[package]
name = "day_1"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6"  # better error messages
colored = "2.0"  # colored string output
env_logger = "0.10"  # logging to stdout, needed by log
log = "0.4"  # message logging
regex = "1.1"  # regular expressions
